fix user update validation err
