# docs/swagger.json
@@ -364,7 +364,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.User"
+                            "$ref": "#/definitions/entity.UpdateUserData"
                         }
                     }
                 ],
@@ -372,7 +372,7 @@
                     "200": {
                         "description": "Successfully update user",
                         "schema": {
-                            "$ref": "#/definitions/entity.User"
+                            "$ref": "#/definitions/entity.UpdateUserData"
                         }
                     }
                 }
@@ -450,6 +450,24 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "entity.UpdateUserData": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "role_id": {
+                    "type": "integer",
+                    "maximum": 1
                 }
             }
         },
